# brotherGame

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: args.cpp  args.h  buffer.h  config.h.in  endianUtil.h  interfaces.h  key.cpp  key.h  log.cpp  log.h  module.cpp  module.h  modules.h  pak.cpp  pak.h  render.cpp  rng.cpp  rng.h  save.cpp  save.h  stack.h  str.cpp  str.h  types.h  util.h  vecType.h  vector.cpp  vector.h
src/game/: atlas.cpp  atlas.h  cube.h  game.cpp  game.h  input.h  map.cpp  map.h  pak.cpp  pak.h  state.h
src/plat/: audio.cpp  audio.h  countTimer.h  file.h  mem.cpp  mem.h  window.h
src/plat/alsa/: alsa.cpp  alsa.h
src/plat/dummy/: dummy_audio.h
src/plat/gl/: gl_buffer.cpp  gl_buffer.h  gl_glf.h  gl_render.cpp  gl_render.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vertex.h  opengl.h  opengl_internal.h
src/plat/linux/: linux_countTimer.cpp  linux_file.cpp  linux_file.h  linux_key.h  linux_log.cpp  linux_main.cpp  linux_mem.cpp  linux_pak.cpp  linux_save.cpp  linux_window.cpp  linux_window.h
src/plat/linux/gl/: linux_gl_window.cpp  linux_gl_window.h  linux_opengl.cpp
tests/: CMakeLists.txt  mem.cpp  test.h
